<resources>
    <string name="app_name">FetchFood</string>
    <string name="recommendation">Recommendation</string>
    <string name="see_all">See all</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Order</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="explorer">Explorer</string>
    <string name="back_button">Back</string>
</resources>

